tests/ui/associated-type-bounds/do-not-look-at-parent-item-in-suggestion-for-type-param-of-current-assoc-item.stderr
error[E0308]: mismatched types
  --> $DIR/do-not-look-at-parent-item-in-suggestion-for-type-param-of-current-assoc-item.rs:24:37
   |
LL |         let _low = self.lows.remove(low.identify()).unwrap();
   |                              ------ ^^^^^^^^^^^^^^ expected `&I`, found associated type
   |                              |
   |                              arguments to this method are incorrect
   |
   = note:    expected reference `&I`
           found associated type `<impl LowT as Identify>::Id`
   = help: consider constraining the associated type `<impl LowT as Identify>::Id` to `&I`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html
note: method defined here
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
